# neat_neural_slime_volley

./: .gitignore  NEAT_notes.md  README.md  main.py  neat_agent.py  pyproject.toml
models/: connection_gene.py  genome.py  node_gene.py
output/2024.09.11.14.19.09/best_genomes/: bg_1.json  bg_2.json  bg_3.json  bg_4.json
output/2024.09.11.14.20.57/best_genomes/: bg_1.json  bg_10.json  bg_100.json  bg_11.json  bg_12.json  bg_13.json  bg_14.json  bg_15.json  bg_16.json  bg_17.json  bg_18.json  bg_19.json  bg_2.json  bg_20.json  bg_21.json  bg_22.json  bg_23.json  bg_24.json  bg_25.json  bg_26.json  bg_27.json  bg_28.json  bg_29.json  bg_3.json  bg_30.json  bg_31.json  bg_32.json  bg_33.json  bg_34.json  bg_35.json  bg_36.json  bg_37.json  bg_38.json  bg_39.json  bg_4.json  bg_40.json  bg_41.json  (+63 more)
output/2024.09.11.20.10.00/: flawed_acyclic_genome.json
output/2024.09.11.20.34.44/: flawed_acyclic_genome.json
output/2024.09.12.00.53.01/: flawed_acyclic_genome.json
output/2024.09.12.00.57.56/: flawed_acyclic_genome.json
output/2024.09.12.01.16.15/: flawed_acyclic_genome.json
output/2024.09.12.01.29.13/: flawed_acyclic_genome.json
output/2024.09.12.13.27.30/: best_genome.json
output/2024.09.12.13.30.53/: best_genome.json
output/2024.09.12.13.38.16/: best_genome.json  flawed_acyclic_genome.json
output/2024.09.12.13.43.57/: flawed_acyclic_genome.json
output/genomes/: g1.json  g2.json  g3.json
src/neat_neural_slime_volleyball/: __init__.py
tests/: test_genome.py  test_genome_advanced.py
utils/: __init__.py  dual_plot.py  numpy_compat.py  sym_render.py
(+362 files in other folders)
