[tool.poetry]
name = "neat-neural-slime-volleyball"
version = "0.1.0"
description = ""
authors = ["yago-mendoza <yagomendoza.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
slimevolleygym = "^0.1.0"
opencv-python = "^4.10.0.84"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
package-mode = false
