[tool.poetry]
name = "neat-neural-slime-volleyball"
version = "0.1.0"
description = ""
authors = ["yago-mendoza <yagomendoza.dev@gmail.com>"]
readme = "README.md"
packages = [
    { include = "neat_neural_slime_volleyball", from = "src" },
]

[tool.poetry.scripts]
run = "main:main"

[tool.poetry.dependencies]
python = "^3.11"
slimevolleygym = "^0.1.0"
opencv-python = "^4.10.0.84"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
pygame = "^2.6.0"
pytest = "^8.3.2"
flask = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
    ".",
    "src"
]